[package]
name = "russet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
blake3 = { version = "1.3.3", features = ["digest"] }
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
crc32fast = "1.3.2"
md5 = "0.7.0"
sha3 = "0.10.8"
